Version 5.0.0 - 2018-10-01
* Bug fixes (see mercurial logs for details)

Version 4.8.0 - 2018-04-23
* Initial release